--- a/package.json
+++ b/package.json
@@ -11,25 +11,28 @@
     "@react-navigation/drawer": "^6.6.6",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.9.17",
-    "@supabase/supabase-js": "^2.21.0",
+    "@supabase/supabase-js": "^2.50.3",
     "date-fns": "^4.1.0",
-    "expo": "^52.0.42",
+    "dotenv": "^17.0.1",
+    "expo": "^52.0.47",
     "expo-av": "^15.0.2",
     "expo-font": "^13.0.4",
     "expo-image-picker": "^16.0.6",
     "expo-linking": "^7.0.5",
     "expo-location": "^18.0.10",
     "expo-secure-store": "^14.0.1",
-    "expo-splash-screen": "^0.29.22",
+    "expo-splash-screen": "^0.29.24",
     "expo-status-bar": "^2.0.1",
     "expo-system-ui": "^4.0.9",
     "expo-webrtc": "^0.0.0",
     "react": "^18.3.1",
     "react-native": "^0.76.9",
+    "react-native-animatable": "^1.3.3",
     "react-native-gesture-handler": "^2.20.2",
     "react-native-get-random-values": "^1.11.0",
     "react-native-google-places-autocomplete": "^2.5.7",
-    "react-native-maps": "^1.18.0",
+    "react-native-maps": "1.18.0",
+    "react-native-modal": "^14.0.0-rc.1",
     "react-native-paper": "^5.12.3",
     "react-native-reanimated": "^3.16.1",
     "react-native-safe-area-context": "^4.12.0",
