--- a/app.json
+++ b/app.json
@@ -6,11 +6,14 @@
     "orientation": "portrait",
     "userInterfaceStyle": "light",
     "splash": {
+      "image": "./src/assets/splash.png",
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
+    "icon": "./src/assets/icon.png",
     "assetBundlePatterns": [
-      "**/*"
+      "**/*",
+      "src/assets/**/*"
     ],
     "ios": {
       "supportsTablet": true,
@@ -21,7 +24,9 @@
       }
     },
     "android": {
+      "icon": "./src/assets/icon.png",
       "adaptiveIcon": {
+        "foregroundImage": "./src/assets/icon.png",
         "backgroundColor": "#FFFFFF"
       },
       "package": "com.firerescue.app",
@@ -34,12 +39,12 @@
       ],
       "config": {
         "googleMaps": {
-          "apiKey": "AIzaSyBUNUKncuC9GT6h4U-nDdjOea4-P7F_w4E"
+          "apiKey": "${EXPO_PUBLIC_GOOGLE_MAPS_API_KEY}"
         }
       }
     },
     "web": {
-      "favicon": "./assets/favicon.png"
+      "favicon": "./src/assets/favicon.png"
     },
     "plugins": [
       "expo-location",
