--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "dependencies": {
     "@config-plugins/react-native-webrtc": "^10.0.0",
-    "@expo-google-fonts/inter": "^0.2.3",
-    "@react-native-async-storage/async-storage": "^1.23.1",
+    "@react-native-async-storage/async-storage": "2.1.2",
     "@react-native-community/audio-toolkit": "^2.0.3",
-    "@react-native-community/datetimepicker": "^8.2.0",
+    "@react-native-community/datetimepicker": "8.4.1",
     "@react-native-community/voice": "^1.1.9",
-    "@react-native-picker/picker": "^2.9.0",
+    "@react-native-picker/picker": "2.11.1",
+    "@react-native-vector-icons/material-design-icons": "^12.2.0",
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/drawer": "^6.6.6",
     "@react-navigation/native": "^6.1.18",
@@ -14,29 +14,29 @@
     "@supabase/supabase-js": "^2.50.3",
     "date-fns": "^4.1.0",
     "dotenv": "^17.0.1",
-    "expo": "^52.0.47",
-    "expo-av": "^15.0.2",
+    "expo": "^53.0.20",
+    "expo-av": "~15.1.7",
     "expo-font": "^13.0.4",
-    "expo-image-picker": "^16.0.6",
-    "expo-linking": "^7.0.5",
-    "expo-location": "^18.0.10",
-    "expo-secure-store": "^14.0.1",
-    "expo-splash-screen": "^0.29.24",
-    "expo-status-bar": "^2.0.1",
-    "expo-system-ui": "^4.0.9",
+    "expo-image-picker": "~16.1.4",
+    "expo-linking": "~7.1.7",
+    "expo-location": "~18.1.6",
+    "expo-secure-store": "~14.2.3",
+    "expo-splash-screen": "~0.30.10",
+    "expo-status-bar": "~2.2.3",
+    "expo-system-ui": "~5.0.10",
     "expo-webrtc": "^0.0.0",
-    "react": "^18.3.1",
-    "react-native": "^0.76.9",
+    "react": "19.0.0",
+    "react-native": "0.79.5",
     "react-native-animatable": "^1.3.3",
-    "react-native-gesture-handler": "^2.20.2",
+    "react-native-gesture-handler": "~2.24.0",
     "react-native-get-random-values": "^1.11.0",
     "react-native-google-places-autocomplete": "^2.5.7",
-    "react-native-maps": "1.18.0",
+    "react-native-maps": "1.20.1",
     "react-native-modal": "^14.0.0-rc.1",
     "react-native-paper": "^5.12.3",
-    "react-native-reanimated": "^3.16.1",
-    "react-native-safe-area-context": "^4.12.0",
-    "react-native-screens": "^4.4.0",
+    "react-native-reanimated": "~3.17.4",
+    "react-native-safe-area-context": "5.4.0",
+    "react-native-screens": "~4.11.1",
     "react-native-url-polyfill": "^2.0.0",
     "react-native-vector-icons": "^10.2.0"
   },
@@ -46,7 +46,7 @@
     "@babel/plugin-transform-export-namespace-from": "^7.23.4",
     "@react-native-community/cli": "^18.0.0",
     "@react-native/metro-config": "^0.78.1",
-    "babel-preset-expo": "^12.0.0",
+    "babel-preset-expo": "~13.0.0",
     "react-native-dotenv": "^3.4.11"
   },
   "name": "firerescue",
