--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^17.0.1",
     "expo": "^53.0.20",
     "expo-av": "~15.1.7",
+    "expo-constants": "^17.1.7",
     "expo-font": "^13.0.4",
     "expo-image-picker": "~16.1.4",
     "expo-linking": "~7.1.7",
