Major cleanup: Remove diagnostic scripts and organize project structure
 CLEANED UP:
- Removed 15+ temporary diagnostic/debug scripts
- Deleted outdated documentation files
- Removed security cleanup scripts

 ORGANIZED:
- Moved important SQL fixes to /docs/fixes/ directory
- Created /docs/README.md with cleanup policy
- Updated .gitignore to prevent future diagnostic script commits

 FIXES PRESERVED:
- Database migration scripts archived for reference
- Core documentation maintained
- User creation scripts kept for ongoing use

This cleanup makes the project more maintainable and focuses on production code only.

--- a/.gitignore
+++ b/.gitignore
@@ -34,4 +34,15 @@ yarn-error.*
 # local env files
 .env*.local
 
+# temporary debugging/diagnostic scripts
+debug_*.js
+check_*.js
+test_*.js
+verify_*.js
+fix_*.js
+sync_*.js
+*_debug.js
+*_test.js
+*_check.js
+
 app-example
