--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     "expo": "^53.0.20",
     "expo-audio": "^0.4.8",
     "expo-constants": "^17.1.7",
+    "expo-file-system": "^18.1.11",
     "expo-font": "^13.0.4",
     "expo-image-picker": "~16.1.4",
     "expo-linking": "~7.1.7",
     "expo-location": "~18.1.6",
     "expo-secure-store": "~14.2.3",
+    "expo-sharing": "^13.1.5",
     "expo-splash-screen": "~0.30.10",
     "expo-status-bar": "~2.2.3",
     "expo-system-ui": "~5.0.10",
