--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "expo-splash-screen": "~0.30.10",
     "expo-status-bar": "~2.2.3",
     "expo-system-ui": "~5.0.10",
+    "expo-video": "^2.2.2",
     "expo-webrtc": "^0.0.0",
     "react": "19.0.0",
     "react-native": "0.79.5",
@@ -42,8 +43,7 @@
     "react-native-screens": "~4.11.1",
     "react-native-url-polyfill": "^2.0.0",
     "react-native-vector-icons": "^10.2.0",
-    "uuid": "^11.1.0",
-    "expo-av": "~15.1.7"
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
