Fix dependency resolution issues and update project configuration
- Fixed VirtualizeUtils error by updating React Native to 0.73.6 and React to 18.2.0
- Added missing @expo/vector-icons and expo-asset dependencies
- Updated babel.config.js to use @babel/plugin-transform-export-namespace-from
- Simplified metro.config.js for better compatibility
- Resolved all bundling errors and ensured proper Expo SDK compatibility

--- a/app.json
+++ b/app.json
@@ -54,7 +54,8 @@
     },
     "plugins": [
       "expo-location",
-      "expo-image-picker"
+      "expo-image-picker",
+      "expo-asset"
     ]
   }
 }
