--- a/package.json
+++ b/package.json
@@ -1,12 +1,17 @@
 {
   "dependencies": {
+    "@babel/helper-compilation-targets": "^7.27.2",
+    "@babel/helper-define-polyfill-provider": "^0.6.5",
+    "@babel/helper-validator-option": "^7.27.1",
     "@config-plugins/react-native-webrtc": "^12.0.0",
+    "@expo/vector-icons": "^14.1.0",
     "@react-native-async-storage/async-storage": "2.1.2",
     "@react-native-community/audio-toolkit": "^2.0.3",
     "@react-native-community/datetimepicker": "8.4.1",
     "@react-native-community/voice": "^1.1.9",
     "@react-native-picker/picker": "2.11.1",
     "@react-native-vector-icons/material-design-icons": "^12.2.0",
+    "@react-native/virtualized-lists": "^0.73.4",
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/drawer": "^6.6.6",
     "@react-navigation/native": "^6.1.18",
@@ -14,11 +19,12 @@
     "@supabase/supabase-js": "^2.50.3",
     "date-fns": "^4.1.0",
     "dotenv": "^17.2.1",
-    "expo": "^53.0.20",
+    "expo": "~53.0.23",
+    "expo-asset": "~11.1.7",
     "expo-audio": "^0.4.8",
     "expo-constants": "^17.1.7",
     "expo-file-system": "^18.1.11",
-    "expo-font": "^13.0.4",
+    "expo-font": "~13.3.2",
     "expo-image-picker": "~16.1.4",
     "expo-linking": "~7.1.7",
     "expo-location": "~18.1.6",
@@ -48,7 +54,7 @@
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@babel/plugin-proposal-export-namespace-from": "^7.18.9",
-    "@babel/plugin-transform-export-namespace-from": "^7.23.4",
+    "@babel/plugin-transform-export-namespace-from": "^7.27.1",
     "@react-native-community/cli": "^18.0.0",
     "@react-native/metro-config": "^0.78.1",
     "babel-preset-expo": "~13.0.0",
