--- a/package.json
+++ b/package.json
@@ -16,15 +16,21 @@
     "@react-navigation/drawer": "^6.6.6",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.9.17",
+    "@react-three/drei": "^10.7.6",
+    "@react-three/fiber": "^9.3.0",
     "@supabase/supabase-js": "^2.50.3",
+    "crypto-js": "^4.2.0",
     "date-fns": "^4.1.0",
     "dotenv": "^17.2.1",
     "expo": "~53.0.23",
     "expo-asset": "~11.1.7",
     "expo-audio": "^0.4.8",
+    "expo-camera": "~16.1.11",
     "expo-constants": "^17.1.7",
     "expo-file-system": "^18.1.11",
     "expo-font": "~13.3.2",
+    "expo-gl": "~15.1.7",
+    "expo-gl-cpp": "^11.4.0",
     "expo-image-picker": "~16.1.4",
     "expo-linking": "~7.1.7",
     "expo-location": "~18.1.6",
@@ -33,11 +39,13 @@
     "expo-splash-screen": "~0.30.10",
     "expo-status-bar": "~2.2.3",
     "expo-system-ui": "~5.0.10",
+    "expo-three": "^6.2.0",
     "expo-video": "^2.2.2",
     "expo-webrtc": "^0.0.0",
     "react": "19.0.0",
     "react-native": "0.79.5",
     "react-native-animatable": "^1.3.3",
+    "react-native-chart-kit": "^6.12.0",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-get-random-values": "^1.11.0",
     "react-native-google-places-autocomplete": "^2.5.7",
@@ -47,8 +55,11 @@
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
+    "react-native-sensors": "^7.3.6",
+    "react-native-svg": "^15.11.2",
     "react-native-url-polyfill": "^2.0.0",
     "react-native-vector-icons": "^10.2.0",
+    "three": "^0.159.0",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
