--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "expo-video": "^2.2.2",
     "expo-webrtc": "^0.0.0",
     "react": "19.0.0",
-    "react-native": "0.79.5",
+    "react-native": "0.79.6",
     "react-native-animatable": "^1.3.3",
     "react-native-chart-kit": "^6.12.0",
     "react-native-gesture-handler": "~2.24.0",
@@ -58,13 +58,11 @@
     "react-native-sensors": "^7.3.6",
     "react-native-svg": "^15.11.2",
     "react-native-url-polyfill": "^2.0.0",
-    "react-native-vector-icons": "^10.2.0",
     "three": "^0.159.0",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "@babel/plugin-proposal-export-namespace-from": "^7.18.9",
     "@babel/plugin-transform-export-namespace-from": "^7.27.1",
     "@react-native-community/cli": "^18.0.0",
     "@react-native/metro-config": "^0.78.1",
@@ -74,7 +72,7 @@
   "name": "firerescue",
   "version": "1.0.0",
   "private": true,
-  "main": "node_modules/expo/AppEntry.js",
+  "main": "index.js",
   "scripts": {
     "start": "expo start",
     "android": "expo run:android",
